@@ -13,6 +13,16 @@
             </value>
         </item>
         <item>
+            <key> <string>creation_guard</string> </key>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>description</string> </key>
+            <value> <string></string> </value>
+        </item>
+        <item>
             <key> <string>groups</string> </key>
             <value>
               <tuple/>
@@ -21,6 +31,14 @@
         <item>
             <key> <string>id</string> </key>
             <value> <string>local_permission_interaction_workflow</string> </value>
+        </item>
+        <item>
+            <key> <string>manager_bypass</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
+            <key> <string>title</string> </key>
+            <value> <string>Local Permission Interaction Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
